Fixed table alignment issue; added team selection for member

--- a/src/app/components/TeamMember/team-members/team-members.component.sass
+++ b/src/app/components/TeamMember/team-members/team-members.component.sass
@@ -1,14 +1,30 @@
 
+mat-grid-list 
+  height: 100vh
+
+
+mat-grid-tile 
+  padding: 16px
+
+
+.table-container 
+  height: calc(100vh - 150px) // Adjust based on your header and buttons
+  padding: 16px
+  width: 80%
+  box-sizing: border-box
+
+
+table.mat-elevation-z8 
+  width: 100%
+
 
 .image-preview img 
-  width: 60px /* Set a fixed size for the image */
-  height: 60px
-  border-radius: 50%/* Makes the image circular */
-  object-fit: cover /* Ensures the image covers the area without distortion */
+  max-height: 60px
+  border-radius: 50%
+
 
 .color-box 
-  width: 24px // Adjust size as needed
+  width: 24px
   height: 24px
-  border-radius: 4px // Optional: rounded corners
-  display: inline-block // Ensures it stays inline with table content
-  border: 1px solid #ccc // Optional: adds a border for better visibility
+  border-radius: 4px
+
