--- a/src/app/components/app-navigation/app-navigation.component.css
+++ b/src/app/components/app-navigation/app-navigation.component.css
@@ -2,6 +2,10 @@
   height: 100%;
 }
 
+.mat-drawer-content{
+  overflow: visible;
+}
+
 .sidenav {
   width: 300px;
 }
